load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

# gazelle:java_maven_install_file java/maven_install.json
# gazelle:map_kind java_binary java_binary @contrib_rules_jvm//java:defs.bzl
# gazelle:map_kind java_library java_library @contrib_rules_jvm//java:defs.bzl

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@contrib_rules_jvm//java/gazelle",
    ],
)
