load("@contrib_rules_jvm//java:defs.bzl", "java_library")

java_library(
    name = "browsingcontext",
    srcs = [
        "BrowsingContext.java",
        "BrowsingContextInfo.java",
        "BrowsingContextModule.java",
        "GetTreeParameters.java",
        "GetTreeResult.java",
        "NavigationParameters.java",
        "NavigationResult.java",
        "ReadinessState.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = ["@maven//:org_seleniumhq_selenium_selenium_remote_driver"],
    deps = [
        "//java/src/org/openqa/selenium/bidirectional/browser",
        "@maven//:org_seleniumhq_selenium_selenium_json",
        "@maven//:org_seleniumhq_selenium_selenium_remote_driver",
    ],
)
